Fix T59496: Movie Clip Editor does not display metadata